Initial changes for building with JDK 9. 'mvn -PwildflyXYZ package' properly running.