@@ -38,7 +38,7 @@
   <parent>
     <groupId>org.jboss.ws</groupId>
     <artifactId>jbossws-parent</artifactId>
-    <version>1.3.0.Final</version>
+    <version>1.3.1-SNAPSHOT</version>
   </parent>
   
   <!-- Source Control Management -->
@@ -115,6 +115,9 @@
     <jaspi.api.version>1.0.0.Alpha1</jaspi.api.version>
     <jacc.api.version>1.0.0.Final</jacc.api.version>
     <javax.inject.version>1</javax.inject.version>
+    <modular.jdk.args/>
+    <istack-commons.version>2.21</istack-commons.version>
+    <xsom.version>20140925</xsom.version>
   </properties>
 
 
@@ -1162,19 +1165,67 @@
         <version>${jaxb.api.version}</version>
       </dependency>
       <dependency>
+        <groupId>com.sun.istack</groupId>
+        <artifactId>istack-commons-tools</artifactId>
+        <version>${istack-commons.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.istack</groupId>
+        <artifactId>istack-commons-runtime</artifactId>
+        <version>${istack-commons.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>codemodel</artifactId>
+        <version>${jaxb.impl.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind.external</groupId>
+        <artifactId>rngom</artifactId>
+        <version>${jaxb.impl.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.glassfish.jaxb</groupId>
+        <artifactId>txw2</artifactId>
+        <version>${jaxb.impl.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xsom</groupId>
+        <artifactId>xsom</artifactId>
+        <version>${xsom.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.glassfish.jaxb</groupId>
         <artifactId>jaxb-runtime</artifactId>
         <version>${jaxb.impl.version}</version>
+        <exclusions>
+           <exclusion>
+             <groupId>com.sun.istack</groupId>
+             <artifactId>*</artifactId>
+           </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.glassfish.jaxb</groupId>
         <artifactId>jaxb-xjc</artifactId>
         <version>${jaxb.impl.version}</version>
+        <exclusions>
+           <exclusion>
+             <groupId>com.sun.istack</groupId>
+             <artifactId>*</artifactId>
+           </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>org.glassfish.jaxb</groupId>
         <artifactId>jaxb-core</artifactId>
         <version>${jaxb.impl.version}</version>
+        <exclusions>
+           <exclusion>
+             <groupId>com.sun.istack</groupId>
+             <artifactId>*</artifactId>
+           </exclusion>
+        </exclusions>
       </dependency>
       <dependency>
         <groupId>commons-logging</groupId>
@@ -1366,6 +1417,39 @@
       <properties>
         <ipVerArgs>-Djava.net.preferIPv4Stack=true -Djava.net.preferIPv6Addresses=false</ipVerArgs>
       </properties>
+    </profile>
+
+    <profile>
+      <id>jdk9</id>
+      <activation>
+        <jdk>9</jdk>
+      </activation>
+      <properties>
+        <modular.jdk.args>--add-modules java.activation,java.xml.bind,java.xml.ws,jdk.xml.bind --add-exports=java.xml.bind/com.sun.xml.internal.bind.v2.runtime=ALL-UNNAMED</modular.jdk.args>
+      </properties>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <configuration>
+              <!-- fork is needed so compiler args can be used -->
+              <fork>true</fork>
+              <compilerArgs>
+                <arg>-J--add-modules</arg>
+                <arg>-Jjava.annotations.common</arg>
+              </compilerArgs>
+            </configuration>
+          </plugin>
+          <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <forkMode>once</forkMode>
+              <argLine>${modular.jdk.args}</argLine>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
     </profile>
 
     <!--
